test/types/integral/integralvariable2.good
integralvariable2.chpl:1: error: Cannot default-initialize a variable with generic type
integralvariable2.chpl:1: note: 'abstract' has generic type 'integral'
